Fix the table cell word wrapping.

--- a/style.css
+++ b/style.css
@@ -59,3 +59,7 @@
   margin: 0px;
   width: 32px;
 }
+
+.piano-cell {
+  white-space:nowrap;
+}
